# Reproducibility-Template

./: .env.example  .gitignore  README.md  pyproject.toml  tmp.py
configs/models/: m.yaml  s.yaml  xs.yaml
docs/source/: conf.py  index.md
src/your_project/: config.py  configs.py  models.py  train.py  utils.py
