[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Your-Repo-Name"
version = "0.0.1"
description = "This is a template repository by MohismLab"
authors = [
    { name = "Shangmin Guo", email = "shawnguo.cn@gmail.com" },
    { name = "Shiyuan Yang", email = "mc45197@um.edu.mo" },
    { name = "Your Name", email = "Your-email@example.com" },
]

readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.11.7",
    "wandb>=0.21.0",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "pydantic-settings>=2.10.1",
    "gitpython>=3.1.44",
    "tqdm>=4.67.1",
]

[project.optional-dependencies]
dev = [
    "autoflake>=2.1.1",
    "black>=22.10.0",
    "flake8>=6.1.0",
    "isort>=5.12.0",
    "pook>=1.4.3",
    "pre-commit>=4.2.0",
    "pytest>=7.4.2",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=4.1.0",
    "pytest-timeout>=2.3.1",
    "pytest-xdist>=3.6.1",
    "myst-parser>=4.0.1",
    "sphinx-book-theme>=1.1.4",
    "sphinx-design>=0.6.1",
]

[project.scripts]
train = "your_project.train:main"

[tool.uv.sources]
torch = [{ index = "pytorch-cu126", marker = "sys_platform == 'linux'"}]
torchvision = [{ index = "pytorch-cu126", marker = "sys_platform == 'linux'"}]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.hatch.build.targets.wheel]
packages = ["src/your_project"]
include = []

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "asyncio: marks tests as asyncio tests",
]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120

[tool.autoflake]
in-place = true
recursive = true
remove-all-unused-imports = true
ignore-init-module-imports = true

[tool.flake8]
max-line-length = 120
extend-ignore = "E203"
exclude = [".git", "__pycache__", "build", "dist"]
per-file-ignores = [
    "__init__.py: F401"
]
